[package]
name = "automation"
version = "0.1.0"
edition = "2021"

# This crate is for the purposes of creating/adding proc macros to the bigger project
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "automation"
proc-macro = true

[dependencies]
proc-macro2 = "1.0.47"
quote = "1.0.21"
syn = "1.0.105"